# backstabber

./: .gitignore  CMakeLists.txt  main_demo.cpp
include/: class.h  deck.hpp  fight.hpp  game_controll.hpp  game_state.hpp  logger.h  monster.hpp  player.hpp  race.h  target.h  turn_controll.hpp
include/cards/: card_base.h  card_class.h  card_door.h  card_effect.h  card_item.h  card_monster.h  card_race.h  card_treasure.h
include/gui/: card_base_gui.hpp  main_window.hpp  player_window.hpp  target_area_gui.hpp
src/: deck.cpp  fight.cpp  game_controll.cpp  game_state.cpp  monster.cpp  player.cpp  turn_controll.cpp
src/executables/: main_console.cpp  main_demo.cpp  test.cpp
src/gui/: card_base_gui.cpp  main_window.cpp  player_window.cpp  player_window.ui
